--- a/object/buildcalendar/list_list.tt
+++ b/object/buildcalendar/list_list.tt
@@ -9,8 +9,8 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th>Plain Iron</th>
-			<th>Porcelain</th>
+			<th style="text-align: center; font-size: 18px;">Plain Iron</th>
+			<th style="text-align: center; font-size: 18px;">Porcelain</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -18,14 +18,14 @@
 			<td>
 [% FOREACH o IN blue %]
 				<div style="text-align: center; padding: 6px; border: 3px solid; border-color: [% o.color %];">
-				<p>Order ID</p><b style="font-size: 28px;">[% o.order_id %]</b>
+				<p>Order ID</p><b style="font-size: 28px;">[% o.order_id %]</b><br>Ordered [% s.format_date(o.order_date) %]
 				</div><br>
 [% END %]
 			</td>
 			<td>
 [% FOREACH o IN red %]
 				<div style="text-align: center; padding: 6px; border: 3px solid; border-color: [% o.color %];">
-				<p>Order ID</p><b style="font-size: 28px;">[% o.order_id %]</b>
+				<p>Order ID</p><b style="font-size: 28px;">[% o.order_id %]</b><br>Ordered [% s.format_date(o.order_date) %]
 				</div><br>
 [% END %]
 			</td>
